--- a/notes_project/users/templates/users/login.html
+++ b/notes_project/users/templates/users/login.html
@@ -1,1 +1,9 @@
-<h1>Login</h1>
+<div>
+    <h1>Login</h1>
+    <form method="POST">
+        {% csrf_token %}
+        {{form}}
+        <button type="submit">Login</button>
+    </form>
+    <p>Don't have an account? <a href="{% url 'sign-up' %}">Sign up</a></p>
+</div>
