--- a/notes_project/users/templates/users/sign-up.html
+++ b/notes_project/users/templates/users/sign-up.html
@@ -1,1 +1,9 @@
-<h1>Sign Up</h1>
+<div>
+    <h1>Sign Up</h1>
+    <form method="POST">
+        {% csrf_token %}
+        {{form}}
+        <button type="submit">Sign Up</button>
+    </form>
+    <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+</div>
