--- a/notes_project/notes/templates/notes/note_confirm_delete.html
+++ b/notes_project/notes/templates/notes/note_confirm_delete.html
@@ -1,7 +1,12 @@
+{% extends "notes/base.html" %}
+
+{% block content %}
 <div>
     <form method="POST">
         {% csrf_token %}
-        <h3>Are you sure you want to delete?</h3>
-        <button type="submit">Submit</button>
+        <h2>Are you sure you want to delete this note?</h2>
+        <br>
+        <button type="submit" class="btn btn-danger">Delete</button>
     </form>
 </div>
+{% endblock %}
