--- a/notes_project/users/templates/users/login.html
+++ b/notes_project/users/templates/users/login.html
@@ -1,9 +1,14 @@
+{% extends "notes/base.html" %}
+{% load crispy_forms_tags %}
+
+{% block content %}
 <div>
-    <h1>Login</h1>
+    <h2>Login</h2>
     <form method="POST">
         {% csrf_token %}
-        {{form}}
-        <button type="submit">Login</button>
+        {{ form|crispy }}
+        <button class="btn btn-success" type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="{% url 'sign-up' %}">Sign up</a></p>
+    <p class="mt-2">Don't have an account? <a href="{% url 'sign-up' %}">Sign up</a></p>
 </div>
+{% endblock %}
