--- a/notes_project/notes/templates/notes/note_list.html
+++ b/notes_project/notes/templates/notes/note_list.html
@@ -24,7 +24,7 @@
     <div class="row mt-2">
         <h5><a href="{% url 'note-detail' note.pk %}">{{ note.title }}</a></h5>
         <p>{{ note.preview_content }}</p>
-        <p class="text-secondary"><i><span>Created on {{ note.created }}</span> | <span>Modified: {{ note.modified }}</span></i></p>
+        <p class="text-secondary"><i><span>Created on {{ note.created }}</span> | <span>Modified on {{ note.modified }}</span></i></p>
     </div>
     {% endfor %}
 </div>
