Clean up templates, add indentation and comments

--- a/notes_project/notes/templates/notes/base.html
+++ b/notes_project/notes/templates/notes/base.html
@@ -20,6 +20,8 @@
             </div>
         </div>
     </div>
+
+    <!-- Main content block. Child templates should overwrite this block -->
     <div class="container p-3 main-content">
         {% block content %}{% endblock %}
     </div>
